Update Swagger UI and add data referencing support
Integrate the newest Swagger UI distribution.
Enhance the API so that also links to data can be pushed to a data value, the middleware then resolves the referenced data, if the new 'X-ResolveAsLinkToData' header is set to true.
